instructions.InstructionsDrawG.scala.error
Compilation error:
InstructionsDrawG:1: error: type blue is not a member of object java.awt.Color
setBrushColor(c:Color.blue)
                      ^InstructionsDrawG:1: error: not found: value c
setBrushColor(c:Color.blue)
              ^